--- a/about/index.html
+++ b/about/index.html
@@ -83,7 +83,7 @@
 <li>Github: <a href="https://github.com/FeilyZhang">@FeilyZhang</a></li>
 <li>Twitter: <a href="https://twitter.com/FeilyZhang">@FeilyZhang</a></li>
 <li>NetEase Music: <a href="https://music.163.com/#/user/home?id=424858919">@取一个名字只能说好难</a></li>
-<li>Wechat Official Account: @机器学习泥瓦张(ID: FeilyZhang)</li>
+<li>Wechat Official Account: @real小袁之家(ID: FeilyZhang)</li>
 </ul>
 
 		</div>
